[package]
name = "behavior-util"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.2"
ahash = "0.8.11"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.137" }
bincode = { version = "2.0.0-rc.3" }
glam = "0.29.2"
termplot = "0.1.1"

# TODO: 删除
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
