[package]
name = "behavior"
version = "0.1.0"
edition = "2021"

[features]
default = []
full = ["gen_editor_data", "expression_node", "tree_visualization"]
gen_editor_data = []
expression_node = ["evalexpr", "num"]
tree_visualization = []

[dependencies]
behavior-macros = { version = "0.1.0", path = "../behavior-macros" }
behavior-util = { version = "0.1.0", path = "../behavior-util" }
rand = "0.9.0"
# ftlog = "0.2.14"
ahash = "0.8.11"
regex = "1.11.1"
chrono = "0.4.39"
downcast-rs = "2.0.1"
evalexpr = { version = "12.0.2", optional = true }
num = { version = "0.4.3", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.137" }
bincode = { version = "2.0.0-rc.3" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
