[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
criterion = "0.5.1"

# [dependencies] instead, and delete the **path**.
[dev-dependencies]
behavior = { version = "0.1.0", path = "../behavior", features = [
    "expression_node",
] }
# behavior = { version = "0.1.0", path = "../behavior", features = ["full"] }
behavior-macros = { version = "0.1.0", path = "../behavior-macros" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0"
ftlog = "0.2.14"
time = "0.3.37"

[[bench]]
name = "log"
path = "log.rs"
harness = false

[[bench]]
name = "control_node"
path = "control_node.rs"
harness = false

[[bench]]
name = "leaf_node"
path = "leaf_node.rs"
harness = false
